Revision history for Net::DNS
=============================


*** 0.48_03

Fix: Only remove leading zeros in the regular expressions for typesbyval
     and classbyval methods. (patch by Ronald v.d. Pol)

Fix: Properly return an empty array in the authority, additional and answer
     methods (patch by Ronald v.d. Pol)

*** 0.48_02 March 14, 2005 (Version 0.49 release candidate 2)

Fix: Bug report by Bernhard Schmidt (concerning a bug on the IPv6 branch).

      The bug caused dname compression to fail and to create
      compression pointers causing loops.

*** 0.48_01 March 7, 2005 (Version 0.49 release candidate 1)


Fix: rt.cpan.org  #8882  
      No redundant lookups on SERVFAIL response 
      and #6149 	 
      Does not search multiple DNS servers
 
      Net::DNS::Resolver will now use the other nameservers in the
      list if the RCODE of the answer is not NO ERROR (0) or NAME
      ERROR (3). When send() exhausted the last nameserver from the it
      will return the answer that was received from the last
      nameserver that responded with an RCODE.

      The error string will be set to "RCODE: <rcode from last packet>"


Fix: rt.cpan.org #8803  

      TXT records don't work with semicolons 

      Since we are expecting presentation format at input a comment
      will need to be escaped ( \; ).

      It could be argued that this is a to strict interpretation of 
      1035 section 5.1.

      While working on this I discovered there are more problems with
      TXT RRs. e.g.; '0100' (a character string content represented in
      hex) is a perfectly legal and should be represented as "\000" in
      presentation format. Net::DNS does pass character strings with
      "non-ASCII" chars from the wire to the char_str_lst array but
      the print functions do not properly escape them when printing.

      Some tests with TXT RRs added to 07-misc.t

      Properly dealing with zone file presentation format and binary 
      data is still to be done.
