@@ -10,6 +10,12 @@ Fix: Only remove leading zeros in the regular expressions for typesbyval
 Fix: Properly return an empty array in the authority, additional and answer
      methods (patch by Ronald v.d. Pol)
 
+
+Fix: rt.cpan.org #11930 
+     Incorrect searchlist duplication removal in Net::DNS::Resolver::Win32 
+     Patch courtesy Risto Kankkunen.
+
+
 *** 0.48_02 March 14, 2005 (Version 0.49 release candidate 2)
 
 Fix: Bug report by Bernhard Schmidt (concerning a bug on the IPv6 branch).
